--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=film-catalog
+server.port=8082
+
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
 spring.datasource.url=jdbc:mysql://localhost:3306/db_movies?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Senha123.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuração do JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jmx.enabled=false
 auth.service.url=http://localhost:8081
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:app.pub
