--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,6 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<!-- Jakarta Servlet -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
@@ -155,7 +149,10 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
